[package]
name = "dnsbl"
version = "0.1.0"
authors = ["Tilo Spannagel <development@tilosp.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = { version = "0.19", default-features = false, features = ["tokio-runtime", "dns-over-rustls"] }
serde = { version = "1.0", features = ["derive"] }
