[package]
name = "dnsbl"
version = "0.1.0"
authors = ["Tilo Spannagel <development@tilosp.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tilosp/dnsbl-rs"
homepage = "https://crates.io/crates/dnsbl"
description = "Check IPs against DNSBL"
include = [
    "/Cargo.toml",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = { version = "0.20.0-alpha.1", default-features = false, features = ["tokio-runtime", "dns-over-rustls"] }
serde = { version = "1.0", features = ["derive"] }
