[package]
name = "dnsbl"
version = "0.2.0"
authors = ["Tilo Spannagel <development@tilosp.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tilosp/dnsbl-rs"
homepage = "https://crates.io/crates/dnsbl"
documentation = "https://docs.rs/dnsbl"
keywords = ["dns", "dnsbl"]
description = "Check IPs against DNSBL"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = { version = "0.22", default-features = false, features = ["tokio-runtime", "dns-over-rustls"] }
serde = { version = "1.0", features = ["derive"] }
